--- a/app/components/Partners/_Partners.scss
+++ b/app/components/Partners/_Partners.scss
@@ -14,7 +14,7 @@
       align-items: center;
       justify-content: center;
       align-content: center;
-      margin-bottom: 10px;
+      margin: 16px 0;
       img {
         filter: grayscale(100%);
         width: auto;
