--- a/app/components/Inicio/_Inicio.scss
+++ b/app/components/Inicio/_Inicio.scss
@@ -52,17 +52,51 @@ main {
   .title {
     color: white;
   }
-  .countdown {
+  .countdownWrapper {
+    display: flex;
+    flex-direction: column;
     color: white;
+    font-size: 40px;
+    .countdown {
+      align-items: center;
+      justify-content: center;
+      display: flex;
+      margin-top: 10px;
+      .wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0 4px;
+        width: 50px;
+        .up {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          padding: 10px;
+          font-size: 24px;
+          font-weight: bold;
+          border: 1px solid rgba(#9e9e9e, 0.5);
+          background: rgba(#212121, 0.5);
+          height: 40px;
+        }
+        .down {
+          font-size: 20px;
+          font-weight: 500;
+          padding: 10px;
+          border: 1px solid rgba(#9e9e9e, 0.5);
+          background: rgba(#212121, 0.5);
+        }
+      }
+    }
   }
   .tgsw {
-    width: 200px;
+    width: 150px;
   }
 }
 
 .messenger {
   margin-right: 20px;
-  @media screen and (max-width:600px) {
+  @media screen and (max-width: 600px) {
     margin-right: 0;
     margin-bottom: 20px;
   }
