--- a/app/components/Tickets/_Tickets.scss
+++ b/app/components/Tickets/_Tickets.scss
@@ -4,24 +4,30 @@
   background: $background-color;
   color: $foreground-color;
 }
+
 .title {
   font-size: 40px;
   margin-bottom: 30px;
 }
 
 .subtitle {
-  font-size: 18px;
+  font-size: 22px;
   color: $background-color;
-  .email a{
+  @media (max-width: 600px) {
+    word-break: break-all;
+  }
+  .email a {
     color: currentColor;
     text-decoration: none;
   }
 }
+
 .soon {
   font-size: 36px;
   font-weight: bold;
   padding: 150px 0;
 }
+
 .staff {
   position: relative;
   .background {
@@ -38,6 +44,17 @@
       height: 100%;
       object-fit: cover;
     }
+  }
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba($primary-color, 0.7);
+    z-index: 1;
   }
   .container {
     position: absolute;
